--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
         "svelte": "^5.0.0",
         "svelte-check": "^4.0.0",
         "typescript": "^5.0.0",
-        "vite": "^7.0.4"
+        "vite": "^7.0.4",
+        "@inlang/paraglide-js": "2.3.2"
     },
     "dependencies": {
         "@tailwindcss/vite": "^4.1.13",
