--- a/package.json
+++ b/package.json
@@ -9,17 +9,21 @@
         "preview": "vite preview",
         "prepare": "svelte-kit sync || echo ''",
         "check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
-        "check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch"
+        "check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
+        "format": "npx prettier --write ."
     },
     "devDependencies": {
+        "@inlang/paraglide-js": "2.3.2",
         "@sveltejs/adapter-auto": "^6.0.0",
         "@sveltejs/kit": "^2.22.0",
         "@sveltejs/vite-plugin-svelte": "^6.0.0",
+        "prettier": "^3.6.2",
+        "prettier-plugin-svelte": "^3.4.0",
+        "prettier-plugin-tailwindcss": "^0.6.14",
         "svelte": "^5.0.0",
         "svelte-check": "^4.0.0",
         "typescript": "^5.0.0",
-        "vite": "^7.0.4",
-        "@inlang/paraglide-js": "2.3.2"
+        "vite": "^7.0.4"
     },
     "dependencies": {
         "@tailwindcss/vite": "^4.1.13",
