--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     },
     "dependencies": {
         "@tailwindcss/vite": "^4.1.13",
+        "iconify-icon": "^3.0.1",
         "tailwindcss": "^4.1.13"
     }
 }
