--- a/project.inlang/settings.json
+++ b/project.inlang/settings.json
@@ -7,6 +7,6 @@
         "https://cdn.jsdelivr.net/npm/@inlang/plugin-m-function-matcher@2/dist/index.js"
     ],
     "plugin.inlang.messageFormat": {
-        "pathPattern": "./locales/{locale}.json"
+        "pathPattern": "src/locales/{locale}.json"
     }
 }
