--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
         "vite": "^7.0.4"
     },
     "dependencies": {
+        "@emailjs/browser": "^4.4.1",
         "@tailwindcss/vite": "^4.1.13",
         "iconify-icon": "^3.0.1",
         "tailwindcss": "^4.1.13"
